@@ -9,17 +9,19 @@
 }
 
 \usage{
-Hist(x, scale=c("frequency", "percent", "density"), xlab=deparse(substitute(x)), 
-	ylab=scale, main="", ...)
+Hist(x, groups, scale=c("frequency", "percent", "density"), xlab=deparse(substitute(x)), 
+	ylab=scale, main="", breaks = "Sturges", ...)
 }
 
 \arguments{
   \item{x}{a vector of values for which a histogram is to be plotted.}
+  \item{groups}{a factor to create histograms by group with common horizontal and vertical scales.}
   \item{scale}{the scaling of the vertical axis: \code{"frequency"} (the default),
     \code{"percent"}, or \code{"density"}.}
   \item{xlab}{x-axis label, defaults to name of variable.}
   \item{ylab}{y-axis label, defaults to value of \code{scale}.}
   \item{main}{main title for graph, defaults to empty.}
+  \item{breaks}{see the \code{breaks} argument for \code{\link{hist}}.}
   \item{\dots}{arguments to be passed to \code{hist}.}
 }
 
@@ -35,6 +37,7 @@ Hist(x, scale=c("frequency", "percent", "density"), xlab=deparse(substitute(x)),
 \examples{
     data(Prestige, package="car")
     Hist(Prestige$income, scale="percent")
+    with(Prestige, Hist(income, groups=type))
     }
 
 \keyword{hplot}
